Fix acknowledgment title overflow on mobile

--- a/less/new-age.less
+++ b/less/new-age.less
@@ -242,6 +242,14 @@ section.download {
     }
 }
 
+section#acknowledgment {
+    @media (max-width: 480px) {
+        h2 {
+            font-size: 40px;
+        }
+    }
+}
+
 section.features {
     .section-heading {
         h2 {
